# httpserver

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.msys  README.md  config.ini  defaults.hpp  docker-compose.yml  lib.hpp  main.cpp  request.hpp  response.cpp  response.hpp  server.cpp  server.hpp
html/: about.html  contacts.html  index.html
html/css/: normalize.css
html/styles/: menu.css
include/: defaults.hpp  http.hpp  lib.hpp  logger.hpp  request.hpp  response.hpp
src/: http.cpp  lib.cpp  logger.cpp  main.cpp  request.cpp  response.cpp
tests/: CMakeLists.txt  tests.cpp
